# wxDemo

./: CMakeLists.txt  README.md
include/: BlueSide.h  BlueSideApp.h  BlueSideCallerPage.h  BlueSideMeetingPage.h  customEvent.h
src/: BlueSide.cpp  BlueSideApp.cpp  BlueSideCallerPage.cpp  BlueSideMeetingPage.cpp  test.cpp
